<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_complementary_filter</name>
  <version>1.2.2</version>
  <description>Filter which fuses angular velocities, accelerations, and (optionally) magnetic readings from a generic IMU device into a quaternion to represent the orientation of the device wrt the global frame. Based on the algorithm by Roberto G. Valenti etal. described in the paper "Keeping a Good Attitude: A Quaternion-Based Orientation Filter for IMUs and MARGs" available at http://www.mdpi.com/1424-8220/15/8/19302 .</description>

  <maintainer email="robertogl.valenti@gmail.com">Roberto G. Valenti</maintainer>
  <license>BSD</license>
 
  <url>http://www.mdpi.com/1424-8220/15/8/19302</url>
  <author email="robertogl.valenti@gmail.com">Roberto G. Valenti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>imu_transformer</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>launch_ros</depend>
  <depend>launch_testing</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
